<resources>
    <string name="app_name">LeetDroid</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="discussions">Discussions</string>
    <string name="profile">Profile</string>
    <string name="all_question_list">All Question List</string>
    <string name="question_description">Question Description</string>
    <string name="question_solution">Solution</string>
    <string name="question_share_link">Share Link?</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="register_button_text">REGISTER</string>
    <string name="login_button_text">LOGIN</string>
    <string name="sync">sync</string>

    <string name="logout_menu_title">Log Out</string>

    <string name="question_paid_status">PAID</string>
    <string name="search">search</string>
    <string name="explore_problems">Explore Problems</string>

    <string name="general_error">Something went wrong, \nplease try again later or Restart the App.</string>
    <string name="user_testcases_text">Testcases</string>
    <string name="user_location_text">location</string>
    <string name="user_education_text">Education</string>
    <string name="daily_challenge_details">"Get daily new questions to solve, that are same from leetcode's daily challenges. "</string>
    <string name="rate_us">Rate Us</string>
    <string name="report_bug">Report bug</string>
    <string name="suggest_new_feature">Suggest new feature</string>
    <string name="source_code">Source Code</string>
    <string name="contribute">Contribute</string>
    <string name="about">About</string>
    <string name="others">Others</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="leetdroid_version">LeetDroid version</string>
    <string name="contributors">Contributors</string>
    <string name="contributors_summary">Any contributions you make are greatly appreciated. Here are the contributors of the app.</string>
    <string name="licenses">Licenses</string>
    <string name="licenses_summary">Here are the epic libraries used by the LeetDroid.</string>
</resources>