<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/group1">
        <item
            android:id="@+id/homeFragment"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/home" />
        <item
            android:id="@+id/generalDiscussionFragment"
            android:icon="@drawable/ic_baseline_discuss_24"
            android:title="@string/discussions" />
        <item
            android:id="@+id/problemsFragment"
            android:icon="@drawable/question_icon"
            android:title="@string/explore_problems" />
        <item
            android:id="@+id/myProfileFragment"
            android:icon="@drawable/ic_round_person_24"
            android:title="@string/profile" />
    </group>

    <group android:id="@+id/group2">
        <item
            android:id="@+id/reportBug"
            android:icon="@drawable/ic_baseline_bug_report_24"
            android:title="@string/report_bug" />

        <item
            android:id="@+id/githubProject"
            android:icon="@drawable/ic_baseline_folder_24"
            android:title="@string/source_code" />

        <item
            android:id="@+id/rateUs"
            android:icon="@drawable/ic_baseline_star_rate_24"
            android:title="@string/rate_us" />

        <item
            android:id="@+id/about"
            android:icon="@drawable/ic_baseline_info_24"
            android:title="@string/about" />
    </group>
</menu>